# cyberbitgame

./: .travis.yml  CODING_STANDARDS  CODING_STANDARDS.md  Makefile.am  README.md  configure  configure.ac  index.html
data/: characters.json
data/maps/: foregroundmap.map
data/units/: cyberbit_xin.cfg
docs/: ToDo.txt  characters.md  hacking.md  presentation.md  roadmap.md
src/: Makefile.am
src/cyberbitGameplay/: gameplay.cpp  gameplay.h  main.cpp
src/json/: json.h  jsoncpp.cpp
src/libCyberbitGame/: constants.h  cyberbitGame.h  errors.h  frame.h  game.cpp  game.h  globals.cpp  globals.h  libraries.h  menu.cpp  menu.h  physics.cpp  physics.h  player.cpp  player.h
src/libCyberbitGame/engine/: character.h  entity.h  music.cpp  music.h  resistance.h  weapon.h
src/libjson/: json-forwards.h
test/: Makefile.am  run-test.sh  test-physics.cpp
